--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,11 @@ body {
   margin: 0;
   padding: 0;
 }
+
+#main-container {
+  background-color: var(--dl-color-bg);
+}
+
+body iframe > * {
+  background-color: var(--dl-color-bg);
+}
