--- a/assets/styles.css
+++ b/assets/styles.css
@@ -153,6 +153,30 @@
     --dl-json-editor-value-color-string: #98c379;
 }
 
+.scroll{
+    overflow:auto
+}
+.scroll::-webkit-scrollbar-thumb{
+    background-color:var(--dl-color-lighter)
+}
+@supports (-moz-appearance: none){
+    .scroll{
+        scrollbar-color:var(--dl-color-lighter) transparent
+    }
+}
+.reactive-scroll .scroll::-webkit-scrollbar-thumb{
+    background-color:transparent
+}
+.reactive-scroll .scroll:hover::-webkit-scrollbar-thumb{
+    background-color:var(--dl-color-lighter)
+}
+.scroll,.scroll-x,.scroll-y{
+    -webkit-overflow-scrolling:touch;
+    will-change:scroll-position
+}
+
+/* CUSTOM STYLES */
+
 html {
     scrollbar-width: thin;
     scrollbar-color: var(--dl-color-scrollbar);
@@ -173,9 +197,10 @@ body {
     width: 100vw;
     font-family: Roboto, sans-serif;
     font-weight: 400;
-    background-color: var(--dl-color-bg);
 }
 
+body,
+#react-entry-point,
 #main-container {
     background-color: var(--dl-color-bg);
 }
